# ultimate_mcp_server

./: .env.example  .gitignore  README.md  pyproject.toml  test_connection.py
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
examples/: test_ollama.py  workflow_delegation_demo.py
storage/smart_browser_internal/: storage_state.enc
tests/: conftest.py
tests/unit/: test_local_provider.py  test_marqo_doc_provider.py  test_tools.py
ultimate_mcp_server/: config.py  constants.py
ultimate_mcp_server/core/models/: __init__.py  tournament.py
ultimate_mcp_server/core/providers/: __init__.py  base.py  local.py
ultimate_mcp_server/core/ums_api/: __init__.py  ums_database.py  ums_endpoints.py  ums_models.py  ums_services.py
ultimate_mcp_server/tools/: docstring_refiner.py  enhanced-ums-lookbook.html  marqo_fused_search.py  single_shot_synthesis.py  smart_browser.py  text_redline_tools.py  tournament.py
ultimate_mcp_server/utils/: parsing.py
ultimate_mcp_server/utils/logging/: formatter.py
